padit qr link fix by spacing secret add

--- a/src/components/PadIt/PadIt.module.css
+++ b/src/components/PadIt/PadIt.module.css
@@ -108,6 +108,7 @@
   color: whitesmoke;
   border-width: 0;
   margin: 15px 3px;
+  cursor: pointer;
 }
 
 .li {
@@ -117,12 +118,29 @@
   border-radius: 15px;
   background-color: #76b1b16b;
   margin: 10px;
+  position: relative;
 }
 .bgcolor-div {
   width: 340px;
   background-color: #f1f0f0;
   border-radius: 35px;
   padding: 5px;
+}
+
+.del-btn {
+  position: absolute;
+  top: -12px;
+  right: 20px;
+  border: 0;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+  color: gray;
+}
+
+.del-btn:hover {
+  background-color: rgb(239, 35, 35);
+  color: black;
 }
 
 .add-btn {
@@ -151,6 +169,7 @@
   position: relative;
   right: 20px;
   margin: 0 10px;
+  cursor: pointer;
 }
 
 .color-area,
@@ -163,6 +182,7 @@
   justify-content: center;
   font-size: 1.3rem;
   width: 28px;
+  cursor: pointer;
 }
 .ex-title {
   font-size: 1.3rem;
